/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * To learn more about Gradle by exploring our Samples at https://docs.gradle.org/8.2-rc-2/samples
 */

plugins {
	id 'java-library'
	id 'maven-publish'
}

ext {
	project_name = 'MarshmallIOw'
	project_version = "$version".toString()
	project_description = "Easy-to-use library handling files for multiple purposes"
	group_id = "fr.278deco"
	artifact_id = 'marshmalliow'
	
	// Dependencies version
	mariadb_version = '1.1.4'
	log4j_version = '2.20.0'
	junit_version = '5.10.0'
}

allprojects {
	sourceCompatibility = JavaVersion.VERSION_18
	targetCompatibility = JavaVersion.VERSION_18
	
	group = group_id
	version = project_version
	description = project_description
	
	repositories {
		mavenCentral()
	}
	
	dependencies {
		api "org.mariadb:r2dbc-mariadb:$mariadb_version"
		api 'io.r2dbc:r2dbc-pool:1.0.1.RELEASE'

		
		// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
		// https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
		implementation "org.apache.logging.log4j:log4j-core:$log4j_version"
		implementation "org.apache.logging.log4j:log4j-api:$log4j_version"
		
		// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
		//  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4.2'
		
		// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
		testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_version"
		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:$junit_version'
	}
	
	 tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.incremental = true
    }
    
    tasks.withType(Javadoc) {
    	options.encoding = 'UTF-8'
    	if(JavaVersion.current().isJava9Compatible()) {
        	options.addBooleanOption('html5', true)
    	}
    }
    
    java {
        withJavadocJar()
        withSourcesJar()
    }
    
    test {
    	useJUnitPlatform()
	}
    
    publishing {
    	publications {
    		mavenJava(MavenPublication) {
    			groupId = group_id
    			artifactId = artifact_id
    			version = project_version
    		
    			from components.java
    			
    			pom {
    				name = 'MarshmallIOw'
    				description = 'Easy-to-use library handling files for multiple purposes'
    				url = 'https://github.com/278deco/MarshmallIOw'
    				licenses {
    					license {
    						name = "LGPLv3"
    						url = "https://github.com/278deco/MarshmallIOw/blob/main/LICENCE"
    					}
    				}
    				developers {
    					developer {
    						name = '278deco'
    					}
    				}
    			}
    			
    			versionMapping {
	                usage('java-api') {
	                    fromResolutionOf('runtimeClasspath')
	                }
	                usage('java-runtime') {
	                    fromResolutionResult()
	                }
	            }
	            
    		}
    	}
    	
    	
    	
    }
    
}